@@ -5491,7 +5491,12 @@ sub lang_yacc_target_hook
 	# Add a dependency for the generated header file, and arrange
 	# for that file to be included in the distribution.
 	# FIXME: this fails for `nodist_*_SOURCES'.
-	$output_rules .= "${header}: $output\n";
+	$output_rules .= ("${header}: $output\n"
+			  # Recover from removal of $header
+			  . "\t\@if test ! -f \$@; then \\\n"
+			  . "\t  rm -f $output; \\\n"
+			  . "\t  \$(MAKE) $output; \\\n"
+			  . "\telse :; fi\n");
 	&push_dist_common ($header);
 	# If the files are built in the build directory, then we want
 	# to remove them with `make clean'.  If they are in srcdir
