@@ -36,4 +36,10 @@ $MAKE foo.h || exit 1
 
 test -f foo.h || exit 1
 
+# We should be able to recover if foo.h is deleted.
+
+rm foo.h || exit 1
+$MAKE foo.h || exit 1
+test -f foo.h || exit 1
+
 exit 0
