@@ -20,6 +20,7 @@ cat > Makefile.am << 'END'
 AUTOMAKE_OPTIONS = subdir-objects
 bin_PROGRAMS = foo/foo
 foo_foo_SOURCES = foo/parse.y
+AM_YFLAGS = -d
 END
 
 mkdir foo
@@ -48,6 +49,13 @@ cd sub
 $MAKE foo/parse.o
 test -f foo/parse.c
 test -f foo/parse.o
+
+# Aside of the rest of this test, let's see if we can recover from
+# parse.h removal
+test -f foo/parse.h
+rm -f foo/parse.h
+$MAKE foo/parse.h
+test -f foo/parse.h
 
 # Now, adds another parser to test ylwrap.
 
