@@ -1,5 +1,16 @@
 2002-06-08  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* automake.in (lang_yacc_target_hook): Add rule to recover from
+	the removal of $header.
+	* lib/am/yacc.am (%BASE%.h): Remove (duplicate with the one
+	output by lang_yacc_target_hook).
+	* tests/yacc7.test: Try to recreate foo.h after its removal.
+	* tests/yacc8.test: Add `AM_YFLAGS = -d' and try to recreate
+	parse.h too.
+	Reported by Bernd Jendrissek.
+
+2002-06-08  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
 	For PR automake/317:
 	* Makefile.am (maintainer-check): Disallow `for f in $(FILES)',
 	suggest `list='$(FILES)'; for f in $$list' instead.
